0.5.0/_sources/gallery/concentric-spheres.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/concentric-spheres.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_concentric-spheres.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_concentric-spheres.py:


Concentric spheres
==================

Display concentric spheres in 3D.

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 9-31



.. image-sg:: /gallery/images/sphx_glr_concentric-spheres_001.png
   :alt: concentric spheres
   :srcset: /gallery/images/sphx_glr_concentric-spheres_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    import numpy as np
    from skimage import morphology

    import napari

    b0 = morphology.ball(5)

    b1 = morphology.ball(10)

    b0p = np.pad(b0, 5)

    viewer = napari.Viewer(ndisplay=3)

    # viewer.add_labels(b0)
    viewer.add_labels(b0p)
    viewer.add_labels(b1 * 2)

    viewer.add_points([[10, 10, 10]], size=1)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_concentric-spheres.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: concentric-spheres.ipynb <concentric-spheres.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: concentric-spheres.py <concentric-spheres.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
